--- a/src/main/webapp/pages/ManageMuncipalityGroups/ManageMuncipalityGroups.html
+++ b/src/main/webapp/pages/ManageMuncipalityGroups/ManageMuncipalityGroups.html
@@ -6,15 +6,15 @@
         <wm-page-content columnwidth="10" name="page_content1">
             <wm-layoutgrid name="layoutgrid1">
                 <wm-gridrow name="gridrow4">
-                    <wm-gridcolumn columnwidth="12" name="gridcolumn7_1" padding="2em unset">
+                    <wm-gridcolumn columnwidth="12" name="gridcolumn7_1" padding="2em unset unset unset">
                         <wm-breadcrumb dataset="bind:Variables.BreadCrum.dataSet" name="breadcrumb1" itemlabel="label" itemicon="icon" itemlink="link"></wm-breadcrumb>
                     </wm-gridcolumn>
                 </wm-gridrow>
                 <wm-gridrow name="gridrow1">
-                    <wm-gridcolumn columnwidth="6" name="gridcolumn1" padding="2em unset">
+                    <wm-gridcolumn columnwidth="6" name="gridcolumn1" padding="1em unset 2em unset">
                         <wm-label padding="unset 0.5em" caption="Municipality Administration" fontweight="bold" fontsize="15" name="label1"></wm-label>
                     </wm-gridcolumn>
-                    <wm-gridcolumn columnwidth="6" name="gridcolumn2" padding="2em unset">
+                    <wm-gridcolumn columnwidth="6" name="gridcolumn2" padding="1em unset 2em unset">
                         <wm-composite name="composite1">
                             <wm-label class="col-md-3 control-label" name="label2" caption="Select Municipality"></wm-label>
                             <wm-container class="col-md-9" name="container1">
@@ -27,29 +27,38 @@
                     <wm-gridcolumn columnwidth="12" name="gridcolumn8">
                         <wm-panel iconclass="wi wi-account-circle" name="Municipalitygroups" title="Manage Municipality Groups">
                             <wm-gridrow name="gridrow14">
-                                <wm-gridcolumn columnwidth="12" name="gridcolumn20_1">
-                                    <wm-search name="searchGroups" placeholder="Search Groups" datafield="All Fields" on-change="Variables.GetMunicipalityGroups.listRecords()"></wm-search>
-                                </wm-gridcolumn>
+                                <wm-gridcolumn columnwidth="12" name="gridcolumn20_1"></wm-gridcolumn>
                             </wm-gridrow>
-                            <wm-livelist listclass="list-group" template="true" itemsperrow="xs-1 sm-2 md-3 lg-4" class="list-card" dataset="bind:Variables.GetMunicipalityGroups.dataSet" navigation="None" name="MunicipalityLiveList" title="" on-click="MunicipalityLiveListClick($event, $scope)">
-                                <wm-listtemplate layout="media" name="listtemplate2_1">
-                                    <wm-tile name="statTile" class="panel" on-click="Widgets.UsersDialog.open()">
-                                        <wm-layoutgrid columns="2" name="layoutgrid4_1">
-                                            <wm-gridrow name="gridrow11">
-                                                <wm-gridcolumn columnwidth="12" name="gridcolumn20" horizontalalign="left">
-                                                    <wm-label caption="bind:Variables.GetMunicipalityGroups.dataSet.data[$i].groupName" fontunit="em" color="#000" class="h4" margin="0px unset" whitespace="nowrap" name="label7"></wm-label>
-                                                    <wm-label caption="bind:Variables.GetMunicipalityGroups.dataSet.data[$i].groupDescription" class="p text-muted" margin="unset unset 0px unset" whitespace="nowrap" name="label8"></wm-label>
-                                                    <wm-anchor caption="" class="h5" hyperlink="tel:" margin="0px unset" whitespace="nowrap" name="anchor3"></wm-anchor>
-                                                    <wm-anchor class="p text-muted" hyperlink="mailto://" caption="" whitespace="nowrap" name="anchor4"></wm-anchor>
-                                                    <wm-button class="btn-default pull-right" caption="" type="button" margin="unset 0.5em" iconclass="wi wi-delete" on-click="Variables.deleteGroup.deleteRecord()" name="button2"></wm-button>
-                                                    <wm-button class="btn-default pull-right" caption="" type="button" margin="unset 0.5em" name="dialogOpen" iconclass="wi wi-mode-edit" on-click="Widgets.EditMunicipalitygroups.open(); $event.stopPropagation();"></wm-button>
-                                                </wm-gridcolumn>
-                                            </wm-gridrow>
-                                        </wm-layoutgrid>
-                                    </wm-tile>
-                                </wm-listtemplate>
-                            </wm-livelist>
                             <wm-layoutgrid name="layoutgrid6">
+                                <wm-gridrow name="gridrow15_1" padding="unset unset 1em unset">
+                                    <wm-gridcolumn columnwidth="4" name="gridcolumn19">
+                                        <wm-search name="searchGroups" placeholder="Search Groups" datafield="All Fields" on-change="Variables.GetMunicipalityGroups.listRecords()"></wm-search>
+                                    </wm-gridcolumn>
+                                    <wm-gridcolumn columnwidth="4" name="gridcolumn18"></wm-gridcolumn>
+                                    <wm-gridcolumn columnwidth="4" name="gridcolumn17"></wm-gridcolumn>
+                                </wm-gridrow>
+                                <wm-gridrow name="gridrow14_1" padding="unset unset 1em unset">
+                                    <wm-gridcolumn columnwidth="12" name="gridcolumn16">
+                                        <wm-livelist listclass="list-group" template="true" itemsperrow="xs-1 sm-2 md-3 lg-4" class="list-card" dataset="bind:Variables.GetMunicipalityGroups.dataSet" navigation="None" name="MunicipalityLiveList" title="" on-click="MunicipalityLiveListClick($event, $scope)">
+                                            <wm-listtemplate layout="media" name="listtemplate2_1">
+                                                <wm-tile name="statTile" class="panel" on-click="Widgets.UsersDialog.open()" margin="unset 2px unset unset">
+                                                    <wm-layoutgrid columns="2" name="layoutgrid4_1">
+                                                        <wm-gridrow name="gridrow11">
+                                                            <wm-gridcolumn columnwidth="12" name="gridcolumn20" horizontalalign="left">
+                                                                <wm-label caption="bind:Variables.GetMunicipalityGroups.dataSet.data[$i].groupName" fontunit="em" color="#000" class="h4" margin="0px unset" whitespace="nowrap" name="label7"></wm-label>
+                                                                <wm-label caption="bind:Variables.GetMunicipalityGroups.dataSet.data[$i].groupDescription" class="p text-muted" margin="unset unset 0px unset" whitespace="nowrap" name="label8"></wm-label>
+                                                                <wm-anchor caption="" class="h5" hyperlink="tel:" margin="0px unset" whitespace="nowrap" name="anchor3"></wm-anchor>
+                                                                <wm-anchor class="p text-muted" hyperlink="mailto://" caption="" whitespace="nowrap" name="anchor4"></wm-anchor>
+                                                                <wm-button class="btn-default pull-right" caption="" type="button" margin="unset 0.5em" iconclass="wi wi-delete" on-click="Variables.deleteGroup.deleteRecord()" name="button2"></wm-button>
+                                                                <wm-button class="btn-default pull-right" caption="" type="button" margin="unset 0.5em" name="dialogOpen" iconclass="wi wi-mode-edit" on-click="Widgets.EditMunicipalitygroups.open(); $event.stopPropagation();"></wm-button>
+                                                            </wm-gridcolumn>
+                                                        </wm-gridrow>
+                                                    </wm-layoutgrid>
+                                                </wm-tile>
+                                            </wm-listtemplate>
+                                        </wm-livelist>
+                                    </wm-gridcolumn>
+                                </wm-gridrow>
                                 <wm-gridrow name="gridrow15">
                                     <wm-gridcolumn columnwidth="12" name="gridcolumn22">
                                         <wm-button class="btn-default pull-right btn-primary" caption="New" position="footer" type="button" margin="unset 0.5em" name="button4" width="10%" on-click="Widgets.AddGroups.open()"></wm-button>
@@ -67,21 +76,23 @@
         <wm-dialog dialogtype="design-dialog" modal="true" title="Users" iconclass="" name="UsersDialog" width="80%" height="60%">
             <wm-livegrid formlayout="dialog" name="livegrid1">
                 <wm-grid gridfirstrowselect="true" editmode="dialog" title="Municipalitygroupmembers List" dataset="bind:Variables.GroupMembersData.dataSet" navigation="Basic" name="grid4">
-                    <wm-grid-column binding="id" caption="Id" generator="identity" pcdisplay="true" mobiledisplay="true" type="integer" primary-key="true" readonly="true"></wm-grid-column>
-                    <wm-grid-column binding="municipalityGroups.groupName" caption="Group Name" generator="assigned" pcdisplay="true" mobiledisplay="true" type="string" related-entity-name="MunicipalityGroups"></wm-grid-column>
-                    <wm-grid-column binding="users.email" caption="Users Email" generator="assigned" pcdisplay="true" mobiledisplay="true" type="string" related-entity-name="Users"></wm-grid-column>
-                    <wm-grid-column binding="users.phoneNumber" caption="Phone Number" generator="assigned" pcdisplay="true" mobiledisplay="true" type="string" related-entity-name="Users"></wm-grid-column>
-                    <wm-grid-column binding="users.photo" widget-type="image" caption="Users Photo" generator="assigned" pcdisplay="true" mobiledisplay="true" type="blob" related-entity-name="Users"><a data-ng-if="columnValue != null" class="col-md-9" target="_blank" data-ng-href="{{contentBaseUrl + row[primaryKey] + '/content/'+ colDef.field}}"><i class="wm-icon wm-icon24 wi wi-file"></i></a>
+                    <wm-grid-column binding="id" caption="Id" type="integer" primary-key="true" generator="identity" readonly="true" edit-widget-type="number" show="true"></wm-grid-column>
+                    <wm-grid-column binding="users.photo" caption="Users Photo" type="blob" widget-type="image" generator="assigned" edit-widget-type="upload" searchable="false" show="true" related-entity-name="Users" readonly="false"><a data-ng-if="columnValue != null" class="col-md-9" target="_blank" data-ng-href="{{contentBaseUrl + row[primaryKey] + '/content/'+ colDef.field}}"><i class="wm-icon wm-icon24 wi wi-file"></i></a>
                     </wm-grid-column>
-                    <wm-grid-action key="addNewRow" display-name="New" iconclass="wi wi-plus" show="true" class="btn-primary" action="addNewRow()" position="footer" shortcutkey=""></wm-grid-action>
-                    <wm-grid-row-action key="updaterow" display-name="" title="Edit" iconclass="wi wi-pencil" show="true" class="btn-transparent" action="editRow()"></wm-grid-row-action>
-                    <wm-grid-row-action key="deleterow" display-name="" title="Delete" iconclass="wi wi-trash" show="true" class="btn-transparent" action="deleteRow()"></wm-grid-row-action>
+                    <wm-grid-column binding="municipalityGroups.groupName" caption="Group Name" type="string" generator="assigned" edit-widget-type="text" show="true" related-entity-name="MunicipalityGroups" readonly="false"></wm-grid-column>
+                    <wm-grid-column binding="users.email" caption="Users Email" type="string" generator="assigned" edit-widget-type="text" show="true" related-entity-name="Users" readonly="false"></wm-grid-column>
+                    <wm-grid-column binding="users.phoneNumber" caption="Phone Number" type="string" generator="assigned" edit-widget-type="text" show="true" related-entity-name="Users" readonly="false"></wm-grid-column>
+                    <wm-grid-column binding="rowOperations" caption="Actions" type="custom" width="120px" readonly="true" sortable="false" searchable="false" show="true"></wm-grid-column>
+                    <wm-grid-action key="addNewRow" display-name="New" show="true" class="btn-primary" iconclass="wi wi-plus" title="New" action="addNewRow()" shortcutkey="" disabled="false"></wm-grid-action>
+                    <wm-grid-row-action key="updaterow" display-name="" show="true" class="btn-transparent" iconclass="wi wi-pencil" title="Edit" action="editRow()" disabled="false"></wm-grid-row-action>
+                    <wm-grid-row-action key="deleterow" display-name="" show="true" class="btn-transparent" iconclass="wi wi-trash" title="Delete" action="deleteRow()" disabled="false"></wm-grid-row-action>
                 </wm-grid>
                 <wm-liveform novalidate="false" errormessage="" title="Municipalitygroupmembers Info" formlayout="dialog" iconclass="wi wi-edit" dataset="bind:Variables.GroupMembersData.dataSet" captionalign="left" captionposition="top" name="liveform1">
                     <wm-layoutgrid columns="2" name="layoutgrid5">
                         <wm-gridrow name="gridrow13">
                             <wm-gridcolumn columnwidth="6" name="gridcolumn14">
-                                <wm-form-field name="municipalityGroups" displayname="Municipality Groups" required="false" show="true" generator="assigned" primary-key="false" key="municipalityGroups" type="list" is-related="true" pc-display="true" mobile-display="true" widget="select"></wm-form-field>
+                                <wm-form-field name="municipalityGroups" displayname="Municipality Groups" required="false" show="true" generator="assigned" primary-key="false" key="municipalityGroups" type="list" is-related="true" pc-display="true" mobile-display="true"
+                                widget="select"></wm-form-field>
                             </wm-gridcolumn>
                             <wm-gridcolumn columnwidth="6" name="gridcolumn15_1">
                                 <wm-form-field name="users" displayname="Users" required="false" show="true" generator="assigned" primary-key="false" key="users" type="list" is-related="true" pc-display="true" mobile-display="true" widget="autocomplete"></wm-form-field>
