--- a/src/main/webapp/pages/leftnav/leftnav.html
+++ b/src/main/webapp/pages/leftnav/leftnav.html
@@ -13,6 +13,9 @@
             <wm-anchor caption="New Form" name="supportLink" iconclass="wi wi-playlist-add" accessroles="User"></wm-anchor>
         </wm-nav-item>
         <wm-nav-item name="nav_item5">
+            <wm-anchor name="anchor15" iconclass="wi wi-work" caption="My Company" on-click="Variables.goToPage_MyCompany.invoke()" accessroles="Everyone"></wm-anchor>
+        </wm-nav-item>
+        <wm-nav-item name="nav_item5">
             <wm-anchor name="anchor5" iconclass="wi wi-person" caption="CX Admin" on-click="Variables.goToPage_CXAdmin.invoke()" accessroles="CXAdmin"></wm-anchor>
         </wm-nav-item>
         <wm-nav-item name="nav_item6">
